# adg-raeven

./: .gitignore  Cargo.toml  Game title suggestions.md  README.md
.obsidian/: app.json  hotkeys.json
Concepts/: abilities.md  biomes.md  player.md
Concepts/abilities/: abilities.md
Concepts/biomes/: deep woods.md  marshes.md  mountains.md  references.md  swamp.md
Excalidraw/: Ant types.md  Maurtue.md  RolyPoly.md  Tree wound.md
art/: assets.blend
art/references/: broken-tree-trunk-forest-fallen-tree_325857-1353.avif
assets/: registry.json
assets/levels/: World.glb
assets/materials/: Material.glb  Mulch_Material.001.glb  Mulch_Material.glb  amanita_texture.glb  ant_material.glb  below_terrain_material.001.glb  below_terrain_material.glb  comaticha_material.glb  grass_terrain_material.001.glb  grass_terrain_material.glb  inkcap_material.glb  lantern_material.001.glb  lantern_material.glb  leucochloridium_material.glb  lillypad_material.glb  mycelium_material_3.glb  physalis_fruit_material.glb  physalis_husk_material.001.glb  physalis_husk_material.glb  physalis_material.glb  physarum_material.glb  pine_material.001.glb  pine_material.glb  polypore_material.glb  straw_material.glb  tree_2_material.glb  tree_breakable_material.001.glb  tree_breakable_material.glb  tree_material.glb  waterlilly_material.glb
assets/models/: boxy.glb
assets/models/gltf/: boxy.gltf
gdd/: Brain Storming Notes.md  Myr.md  PuzzleGame.md  Somp.md  System ideas.md
src/example-copies/scene3d-test/: Cargo.toml
src/gameplay/: Cargo.toml
src/gameplay/art/: assets.blend
(+39 files in other folders)
