[workspace]

resolver = "2"

members = [
  "src/example-copies/scene3d-test"

, "src/plugins/core"
, "src/gameplay"]

[workspace.dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.29.1"
bevy_framepace = "0.18.0"

core = { path = "src/plugins/core" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

